--- a/src/StartProject/StartProject.csproj
+++ b/src/StartProject/StartProject.csproj
@@ -189,17 +189,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MyApplication.Module\MyApplication.Module.csproj">
+    <ProjectReference Include="..\FarMory.CropManagement\FarMory.CropManagement.csproj">
       <Project>{98cc8a11-d88d-4fbc-9d0f-b78174eba969}</Project>
-      <Name>MyApplication.Module</Name>
+      <Name>FarMory.CropManagement</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MyApplication.Resources.MyResource\MyApplication.Resources.MyResource.csproj">
+    <ProjectReference Include="..\FarMory.Resources\FarMory.Resources.csproj">
       <Project>{dce3b1a1-75b0-42eb-afea-531f23825ee5}</Project>
-      <Name>MyApplication.Resources.MyResource</Name>
+      <Name>FarMory.Resources</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MyApplication\MyApplication.csproj">
+    <ProjectReference Include="..\FarMory\FarMory.csproj">
       <Project>{df4730d4-5db2-46a5-9f2b-c7b22e61268b}</Project>
-      <Name>MyApplication</Name>
+      <Name>FarMory</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
