--- a/src/FarMory.CropManagement/FarMory.CropManagement.csproj
+++ b/src/FarMory.CropManagement/FarMory.CropManagement.csproj
@@ -31,8 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Moryx, Version=3.0.0.37, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Moryx.3.0.0-dev.37\lib\netstandard2.0\Moryx.dll</HintPath>
+    <Reference Include="Moryx, Version=3.0.0.42, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Moryx.3.0.0-dev.42\lib\netstandard2.0\Moryx.dll</HintPath>
+    </Reference>
+    <Reference Include="Moryx.AbstractionLayer, Version=5.0.0.21, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Moryx.AbstractionLayer.5.0.0-dev.21\lib\net461\Moryx.AbstractionLayer.dll</HintPath>
     </Reference>
     <Reference Include="Moryx.Runtime, Version=3.0.0.37, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Moryx.Runtime.3.0.0-dev.37\lib\netstandard2.0\Moryx.Runtime.dll</HintPath>
@@ -41,11 +44,11 @@
       <HintPath>..\..\packages\Moryx.Tools.Wcf.3.0.0-dev.37\lib\net461\Moryx.Tools.Wcf.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Annotations, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\System.ComponentModel.Annotations.4.5.0\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
+      <HintPath>..\..\packages\System.ComponentModel.Annotations.4.7.0\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -58,9 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Components\IMyComponent.cs" />
-    <Compile Include="Facade\MyFacade.cs" />
-    <Compile Include="Implementation\Component.cs" />
+    <Compile Include="Components\IGardenPlanner.cs" />
+    <Compile Include="Facade\CropManagementFacade.cs" />
+    <Compile Include="Implementation\GardenPlanner.cs" />
     <Compile Include="ModuleController\ModuleConfig.cs" />
     <Compile Include="ModuleController\ModuleConsole.cs" />
     <Compile Include="ModuleController\ModuleController.cs" />
